--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,7 @@
    border border-2 border-dark shadow shadow-lg">
     <component-padre></component-padre>
   </div>
-  <div class="col-5 border bg-warning m-3 rounded-3 border 
- border-2 border-dark shadow shadow-lg">
+  <div class="col-5 m-3 row align-items-center">
     <component-vecino></component-vecino>
   </div>
 </div>
