--- a/src/app/components/vecino/vecino.component.html
+++ b/src/app/components/vecino/vecino.component.html
@@ -1,14 +1,16 @@
-
-<h1>Hola soy un componente vecino</h1>
-<div class="btn-group col-12">
-<button class="btn btn-outline-light bg-danger col-12 mt-3 "
-(click)="chAccionVecino()">
-    <span class="fw-bold">Accion del vecino</span>
-</button>
+<div class=" border bg-warning rounded-3  
+ border-2 border-dark shadow shadow-lg p-3">
+    <h1>Hola soy un componente vecino</h1>
+    <div class="btn-group col-12">
+        <button class="btn btn-outline-light bg-danger col-12 mt-3 " (click)="chAccionVecino()">
+            <span class="fw-bold">Accion del vecino</span>
+        </button>
+    
+    </div>
+    
+    <h5 class="mt-4 text-center">
+        Esta es una accion del <span class="fw-bold fst-italic">
+            {{accionData.accion}}</span>
+    </h5>
 
 </div>
-
-<h5 class="mt-4 text-center">
-    Esta es una accion del <span class="fw-bold fst-italic">
-        {{accionData.accion}}</span>
-</h5>
