proyectoto finalizado segun con el videotutorial, el nodo 9723557 tiene comunicacion entre todos los componentes

--- a/src/app/components/hijo/hijo.component.html
+++ b/src/app/components/hijo/hijo.component.html
@@ -3,7 +3,7 @@
     <h3>Hola soy un componenete hijo</h3>
     <div class="btn-group col-12">
         <button class="btn btn-outline-light bg-success mt-3"
-            (click)="accionPropia()"
+            (click)="accioHijo()"
         >
             <span class="">Accion Hijo</span>
         </button>
