--- a/src/app/components/padre/padre.component.html
+++ b/src/app/components/padre/padre.component.html
@@ -1,14 +1,14 @@
     <h1 class="h1">Hola soy un componente padre</h1>
    <div class="btn-group col-12">
     <button class="btn btn-outline-danger bg-dark mt-3"
-        (click)="chAccionPadre()"
+        (click)="accionPadre()"
     >
         <span class="">Accion Padre</span>
     </button>
   
    </div>
      <h5 class="mt-4 text-center">
-        Esta es una accion del <span class="fw-bold fst-italic">{{accionPadre}}</span>
+        Esta es una accion del <span class="fw-bold fst-italic">{{accionDelPadre}}</span>
     </h5>
 
     
